--- a/src/app/places/place-list/place-list.component.html
+++ b/src/app/places/place-list/place-list.component.html
@@ -6,22 +6,9 @@
 <hr>
 <div class="row">
   <div class="col-xs-12">
-    <a 
-    *ngFor="let place of places" 
-    href="#" 
-    class="list-group-item clearfix">
-      <div class="pull-left">
-        <h4 class="list-group-item-heading">{{place.name}}</h4>
-        <p class="list-group-item-text">{{place.description}}</p>
-      </div>
-      <span class="pull-right">
-        <img 
-        [src] ="place.imagePath" 
-        alt="{{place.name}}" 
-        class="img-responsive" 
-        style="max-height: 50px;">
-      </span>
-    </a>
-    <app-place-item></app-place-item>
+    <app-place-item 
+      *ngFor="let placeItem of places" 
+      [place]="placeItem"
+      (selectedPlaceItem) = "propogatePlaceItem(placeItem)"></app-place-item>
   </div>
 </div>
