--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
-<app-header></app-header>
+<app-header (selectedMenu)="onMenuClick($event)"></app-header>
 <div class="container">
   <div class="row">
     <div class="col-md-20">
-      <app-places></app-places>
-      <app-deals-list></app-deals-list>
+      <app-deals-list *ngIf="loadedFeature === 'deals'"></app-deals-list>
+      <app-places *ngIf="loadedFeature !== 'deals'"></app-places>
     </div>
   </div>
 </div>
