--- a/src/app/deals-list/deals-edit/deals-edit.component.html
+++ b/src/app/deals-list/deals-edit/deals-edit.component.html
@@ -4,18 +4,24 @@
       <div class="row">
         <div class="col-sm-5 form-group">
           <label for="name">Hotel Name</label>
-          <input type="text" id="name" class="form-control">
+          <input type="text" 
+            id="name"
+            class="form-control"
+            #hotelNameInput>
         </div>
         <div class="col-sm-2 form-group">
           <label for="noOfDeals">Number of Deals</label>
-          <input type="number" id ="noOfDeals" class="form-control">
+          <input type="number" 
+            id ="noOfDeals" 
+            class="form-control"
+            #noOfDealsInput>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <button class="btn btn-success" type = "submit">Add</button>
-          <button class="btn btn-danger" type = "button">Delete</button>
-          <button class="btn btn-primary" type = "button">Clear</button>
+          <button class="btn btn-success" type = "submit" (click)="onAdd()">Add</button>
+          <button class="btn btn-danger" type = "button" (click)="onDelete()">Delete</button>
+          <button class="btn btn-primary" type = "button" (click)="onClear()">Clear</button>
         </div>
       </div>
     </form>
