--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,8 +5,8 @@
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a href="#">Deals</a></li>
-        <li><a href="#">Places</a></li>
+        <li><a href="#" (click) = "onSelection('deals')">Deals</a></li>
+        <li><a href="#" (click) = "onSelection('places')">Places</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
