--- a/src/app/places/place-details/place-details.component.html
+++ b/src/app/places/place-details/place-details.component.html
@@ -1,11 +1,11 @@
 <div class="row">
   <div class="col-xs-12">
-    <img src="" alt="" class="img-responsive">
+    <img [src]="selectedPlace.imagePath" alt="{{selectedPlace.name}}" class="img-responsive">
   </div>
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <h1>Place Name</h1>
+    <h1>{{selectedPlace.name}}</h1>
   </div>
 </div>
 <div class="row">
@@ -26,7 +26,7 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    Description
+      {{selectedPlace.description}}
   </div>
 </div>
 <div class="row">
