--- a/src/app/places/place-list/place-list.component.html
+++ b/src/app/places/place-list/place-list.component.html
@@ -9,6 +9,6 @@
     <app-place-item 
       *ngFor="let placeItem of places" 
       [place]="placeItem"
-      (selectedPlaceItem) = "propogatePlaceItem(placeItem)"></app-place-item>
+    ></app-place-item>
   </div>
 </div>
