--- a/src/app/deals-list/deals-list.component.html
+++ b/src/app/deals-list/deals-list.component.html
@@ -1,5 +1,5 @@
 <div class="col-xs-20">
-  <app-deals-edit (dealAdded)= "addDealToList($event)"></app-deals-edit>
+  <app-deals-edit></app-deals-edit>
   <hr>
   <ul class="list-group">
     <a 
