--- a/src/app/places/places.component.html
+++ b/src/app/places/places.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-5">
-        <app-place-list (placeItemWasSelected)="displayPlaceDetails($event)"></app-place-list>
+        <app-place-list></app-place-list>
     </div>
     <div class="col-md-7">
         <app-place-details 
