--- a/src/app/places/place-details/place-details.component.html
+++ b/src/app/places/place-details/place-details.component.html
@@ -18,8 +18,8 @@
       </button>
       <ul class="dropdown-menu">
         <li><a (click) = addToDealList() style = "cursor: pointer;">To Deal List</a></li>
-        <li><a href="#">Edit Place</a></li>
-        <li><a href="#">Delete Place</a></li>
+        <li><a style = "cursor: pointer;" [routerLink] = "['edit']">Edit Place</a></li>
+        <li><a style = "cursor: pointer;">Delete Place</a></li>
       </ul>
     </div>
   </div>
