--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,19 +1,19 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a href="#" class="navbar-brand">Hola Vida</a>
+      <a class="navbar-brand" routerLink="">Hola Vida</a>
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a href="#" (click) = "onSelection('deals')">Deals</a></li>
-        <li><a href="#" (click) = "onSelection('places')">Places</a></li>
+        <li routerLinkActive = "active"><a [routerLink] = "['deals']">Deals</a></li>
+        <li routerLinkActive = "active"><a [routerLink] = "['places']">Places</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown" appDropDown>
-          <a href="#" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
+          <a style = "cursor: pointer;" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Save Data</a></li>
-            <li><a href="#">Fetch Data</a></li>
+            <li><a style = "cursor: pointer;">Save Data</a></li>
+            <li><a style = "cursor: pointer;">Fetch Data</a></li>
           </ul>
         </li>
       </ul>
