--- a/src/app/deals-list/deals-edit/deals-edit.component.html
+++ b/src/app/deals-list/deals-edit/deals-edit.component.html
@@ -1,26 +1,43 @@
 <div class="row">
   <div class="col-xs-12">
-    <form>
+    <form (ngSubmit)="onSubmit()" #dealForm="ngForm">
       <div class="row">
         <div class="col-sm-5 form-group">
           <label for="name">Hotel Name</label>
           <input type="text" 
             id="name"
             class="form-control"
-            #hotelNameInput>
+            name="hotelname"
+            ngModel
+            required
+            #hotelName="ngModel">
+            <span class="help-block"
+            *ngIf="!hotelName.valid && hotelName.touched">Please enter hotel name!</span>
         </div>
         <div class="col-sm-2 form-group">
           <label for="noOfDeals">Number of Deals</label>
           <input type="number" 
             id ="noOfDeals" 
             class="form-control"
-            #noOfDealsInput>
+            name = "noofdeals"
+            ngModel
+            required
+            pattern="^[1-9]+[0-9]*$"
+            #noOfDeals="ngModel">
+            <span class="help-block"
+            *ngIf="!noOfDeals.valid && noOfDeals.touched"># of deals?</span>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <button class="btn btn-success" type = "submit" (click)="onAdd()">Add</button>
-          <button class="btn btn-danger" type = "button" (click)="onDelete()">Delete</button>
+          <button class="btn btn-success" 
+            type = "submit" 
+            [disabled]="!dealForm.valid"> 
+            {{ editMode ? 'Update' : 'Add' }}
+          </button>
+          <button class="btn btn-danger" type = "button" 
+          *ngIf = "editMode"
+          (click)="onDelete()">Delete</button>
           <button class="btn btn-primary" type = "button" (click)="onClear()">Clear</button>
         </div>
       </div>
