--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -9,12 +9,12 @@
         <li routerLinkActive = "active"><a [routerLink] = "['deals']">Deals</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <ng-template [ngIf]="!authService.isAuthenticated()">
+        <ng-template [ngIf]="!((authState | async).authenticated)">
             <li><a routerLink="/signup">Register</a></li>
             <li><a routerLink="/signin">Log In</a></li>
         </ng-template>
        
-        <ng-template [ngIf]="authService.isAuthenticated()">
+        <ng-template [ngIf]="(authState | async).authenticated">
             <li><a (click)="logOut()" style="cursor: pointer">Log Out</a></li>
             <li class="dropdown" appDropDown >
               <a style = "cursor: pointer;" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
